Advanced Command Configuration and Requirements (#13)
* Initial Creation

* Initial Creation

* work on new command data impl (see desc)
- rename to CommandData
- merge CommandConfig and CommandRequirement
- add ability to get command data from Command class
- remove old pagination class
- add new custom requirement functional interface
- new /colors idea with custom requirement example
- javadocsssss

* custom advancement for /extinguish (see desc)
requires a player to hit a blaze with a fire resistance potion
we don't have to keep this but the code works, and I think it's rather cool

* quenching fire fixes

* remove quenching fire - going to separate branch

* Update `/help` to components and new requirements

* Remove custom requirements -- not agreed upon yet

* Fix indentation

Co-authored-by: kevinbarnes <ksbarnes39@gmail.com>